<resources>
    <string name="app_name">GitHub Browser</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="title_activity_user">User</string>
    <string name="title_activity_user_search">Search users</string>
    <string name="search_title">Search User</string>
    <string name="search_hint">Search User</string>
    <string name="action_my_profile">My Profile</string>
    <string name="action_logout">Logout</string>

    <string name="text_username">Username</string>
    <string name="button_followers">Followers</string>
    <string name="button_following">Following</string>
    <string name="button_repos_owned">Owned</string>
    <string name="button_repos_starred">Starred</string>

    <string name="title_activity_repository">Repository</string>
    <string name="text_commits">Commits:</string>
    <string name="text_branches">Branches:</string>
    <string name="text_releases">Releases:</string>
    <string name="text_contributors">Contributors:</string>
    <string name="text_star">Star:</string>
    <string name="text_fork">Fork:</string>
    <string name="text_languages">Languages:</string>
</resources>
