<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.githubbrowser.activities.RepositoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_owner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/btn_white"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:clickable="true">
            <ImageView
                android:id="@+id/image_avatar"
                android:background="@color/white"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:id="@+id/text_username"
                android:text="@string/text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"/>
        </LinearLayout>



        <TableLayout
            android:id="@+id/table_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/layout_owner"
            android:layout_alignParentRight="true"
            android:stretchColumns="1">
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">
                <TextView
                    android:id="@+id/text_commits"
                    android:text="@string/text_commits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="left|center_vertical"/>
                <TextView
                    android:id="@+id/text_star"
                    android:text="@string/text_star"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="left|center_vertical"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">
                <TextView
                    android:id="@+id/text_branches"
                    android:text="@string/text_branches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="left|center_vertical"/>
                <TextView
                    android:id="@+id/text_fork"
                    android:text="@string/text_fork"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="left|center_vertical"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">
                <TextView
                    android:id="@+id/text_releases"
                    android:text="@string/text_releases"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="left|center_vertical"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">
                <Button
                    android:id="@+id/button_contributors"
                    android:text="@string/text_contributors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="left|center_vertical"
                    android:background="@drawable/btn_white"/>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp">
                <TextView
                    android:id="@+id/text_languages"
                    android:text="@string/text_languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="left|center_vertical"
                    android:layout_span="2"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">




        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
