<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/wallet_highlighted_text_holo_light"
    tools:context="com.githubbrowser.activities.UserActivity">

    <RelativeLayout
        android:id="@+id/layout_userinfo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
        <ImageView
            android:id="@+id/image_avatar"
            android:background="@color/white"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"/>
        <TextView
            android:id="@+id/text_username"
            android:text="@string/text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/image_avatar"/>
        <LinearLayout
            android:id="@+id/layout_follow_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/image_avatar">
            <Button
                android:id="@+id/button_followers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_followers"
                android:background="@drawable/btn_white"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_gravity="bottom"/>
            <Button
                android:id="@+id/button_following"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_following"
                android:background="@drawable/btn_white"
                android:layout_gravity="bottom"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_repos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:weightSum="2">
        <Button
            android:id="@+id/button_repos_owned"
            android:background="@drawable/btn_white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_repos_owned"
            android:textSize="20sp"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />
        <Button
            android:id="@+id/button_repos_starred"
            android:background="@drawable/btn_white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_repos_starred"
            android:textSize="20sp"/>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager_repos"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

    </android.support.v4.view.ViewPager>

</LinearLayout>
